Bug 72345 - Charts - Up Down Bars are missing after Round trip
Summary: Charts - Up Down Bars are missing after Round trip
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: All All
: medium major
Assignee: Yogesh Bharate
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks: 73142
  Show dependency treegraph
 
Reported: 2013-12-05 10:39 UTC by Yogesh Bharate
Modified: 2014-01-16 13:53 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Up Down Bars are missing after Round trip (23.52 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-12-05 10:39 UTC, Yogesh Bharate
Details
File after round trip (8.00 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-12-12 14:19 UTC, Yogesh Bharate
Details
Screenshot of word document (314.33 KB, image/jpeg)
2013-12-13 05:52 UTC, Yogesh Bharate
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yogesh Bharate 2013-12-05 10:39:34 UTC
Created attachment 90297 [details]
Up Down Bars are missing after Round trip

Up Down Bars for data markers are missing after RoundTrip for all chart types
Comment 1 Robert Großkopf 2013-12-12 11:53:03 UTC
What kind of document you added? It isn't any LO-document.

Who has confirmed this bug? There must be more than the person, who reported the bug.
Comment 2 Yogesh Bharate 2013-12-12 14:19:48 UTC
Created attachment 90666 [details]
File after round trip
Comment 3 Yogesh Bharate 2013-12-12 14:21:04 UTC
Hi Robert..

We are working on Interoperability,where we create document with some data eg. chart we open that document in Libreoffice and saves it back to docx format.(This saved doc is RoundTripped doc)

Here expected result is when we open the saved file  in Microsoft office, there should not be any difference in original file and RoundTripped file.

The attached document contains LineChart with UpDownBar, after round  when we open this files back in Microsoft office UpDownBar get missed.
Comment 4 Robert Großkopf 2013-12-12 14:48:26 UTC
Hi Yogesh,

I don't have any Microsoft software here. I 'm using Linux and LO. When I open the attached files I only see empty pages. Also I do not know what you mean with "Up Down Bars".
Could be a screenshot (before - after) would help.
I think this isn't a Writer-bug but a request for an enhancement for filters. You are creating *.docx-documents, not *.odt-documents, which are the standard for Writer.

Some more hints:
You have chosen the version 4.3.0.0.alpha0 as first version where the reported behavior appeared. Is this the right version? Does it work in earlier versions?
You set your own name in "Assigned To". "Assigned To" means, that there is a developer, who would fix the bug. This report might be ignored by other developers.

Regards

Robert
Comment 5 Yogesh Bharate 2013-12-13 05:52:36 UTC
Created attachment 90690 [details]
Screenshot of word document

Hi Robert,

I have attached the screenshot of difference.
this might  be helpful.

Ragards,
Yogesh
Comment 6 Robert Großkopf 2013-12-13 07:02:41 UTC
Hi Yogesh,
> 
> I have attached the screenshot of difference.
> this might  be helpful.

Now I see what you mean. I have tried to open the other documents you attached with LO 4.2.0.0.beta2 and LO 4.3.0.0.alpha. There I could see a chart, which shows the down-bars as one line only.

LO before 4.2 shows only an empty page. So this is a new function in the versions of LO, which aren't published yet.

Regards

Robert
Comment 7 Commit Notification 2013-12-13 19:48:57 UTC
YogeshBharate committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=077213c23e377fd7398b35b88050ac173d22d268

fdo#72345: Fixed for Charts - Up Down Bars are missing after Round trip



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 surbhi.tongia 2013-12-18 07:06:43 UTC
Verified on Build :libo-master@7E2013-12-15_08.41.01_LibreOfficeDev_4.3.0.0.alpha0_Win_x86.
Up Down Bars are preserved properly after RT.
Comment 9 Jorendc 2013-12-29 21:55:40 UTC
(In reply to comment #8)
> Verified on Build
> :libo-master@7E2013-12-15_08.41.01_LibreOfficeDev_4.3.0.0.alpha0_Win_x86.
> Up Down Bars are preserved properly after RT.

Except of the border, looks indeed fixed.

@Yogesh: I guess we can mark this one as RESOLVED FIXED?

PS: the chart is indeed not correctly shown using Libreoffice, but I think that's another issue :). Not losing data when rountripping the file is a great step :-). Thanks!
Comment 10 Yogesh Bharate 2013-12-30 05:46:13 UTC
@Joren:
My code changes was for UpDownBars getting missed after RoundTrip, you can mark this bug as RESOLVED FIXED.

We can create another issue for "UpDownBars  not correctly shown using Libreoffice".

Thanks!
Comment 11 Jorendc 2013-12-30 10:39:13 UTC
(In reply to comment #10)
> @Joren:
> My code changes was for UpDownBars getting missed after RoundTrip, you can
> mark this bug as RESOLVED FIXED.

Indeed, and as far I can read the description of this bug report, that was the goal of it :-).

> We can create another issue for "UpDownBars  not correctly shown using
> Libreoffice".

Correct! I'll create on in a minute.

> Thanks!
I think we have to thank you ;-)!

Kind regards,
Joren

As I also commented on other bugs from your colleagues (synerzip): As developer whom worked on this bug, you may mark bugs as RESOLVED FIXED when the goal of the bug report is reached :). So, feel free to mark every 'done' bug as such. Others can mark it as VERIFIED FIXED once they can't reproduce the mentioned behavior.
Comment 12 Commit Notification 2014-01-16 13:53:43 UTC
YogeshBharate committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f6824eb6df649628630598278aa1b5e3ab4b9a0d

Unit test added for fdo#72345 Up Down Bars are missing after Round trip



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.