fdo#72345: Fixed for Charts - Up Down Bars are missing after Round trip

UpDownBars missing after Roundtrip in case of LineChart.

Change-Id: Ia3e574aefb9436a2f5b2b88e8824625d09d35c38